Thu Dec 20 19:25:40 2001                        Michael Jennings (mej)

The beginnings of some SGML documentation.
----------------------------------------------------------------------
Wed Jan  2 19:12:58 2002                        Michael Jennings (mej)

Debian packaging goop.  Yikes.
----------------------------------------------------------------------
Thu Jan  3 10:12:16 2002                        Michael Jennings (mej)

Cleaned up the Debian stuff thanks to some help from Brian Almieda
<bma@debian.org>.
----------------------------------------------------------------------
Thu Jan  3 10:16:44 2002                        Michael Jennings (mej)

Make sure to include debian/ directory in source tarball.
----------------------------------------------------------------------
Fri Jan  4 18:36:49 2002                        Michael Jennings (mej)

Working on deb support.
----------------------------------------------------------------------
Mon Feb 18 15:38:36 2002                        Michael Jennings (mej)

Added support for passing SRPM's to mzmerge.
----------------------------------------------------------------------
Mon Feb 25 18:49:59 2002                        Michael Jennings (mej)

Argh.  How long has that extra 's' on the end of query_log() been
there? :P
----------------------------------------------------------------------
Mon Feb 25 19:00:20 2002                        Michael Jennings (mej)

Updated Debian changelog
----------------------------------------------------------------------
Tue Feb 26 15:49:08 2002                        Michael Jennings (mej)

Fixed the usage of $EDITOR in case it's more than one word.
----------------------------------------------------------------------
Tue Feb 26 15:58:10 2002                        Michael Jennings (mej)

If arguments are given to mzput without -a or -r, assume -x, but do
the ChangeLog.
----------------------------------------------------------------------