@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: revtool,v 1.80 2002/02/26 19:09:38 mej Exp $
+# $Id: revtool,v 1.81 2002/02/26 19:59:03 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -152,7 +152,7 @@ main
     }
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.80 $ created on $Date: 2002/02/26 19:09:38 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.81 $ created on $Date: 2002/02/26 19:59:03 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
@@ -226,7 +226,7 @@ main
                 } else {
                     $logfile = &do_changelog_entry(1);
                     if ($logfile) {
-                        $retval = &commit_to_master($logfile, @ARGV);
+                        $retval = &commit_to_master($logfile, (scalar(@ARGV) ? ("ChangeLog", @ARGV) : undef));
                         unlink($logfile, "$logfile~");
                     }
                 }
